@@ -3,8 +3,6 @@ package com.badbones69.crazycrates.api.objects;
 import com.badbones69.crazycrates.api.enums.PersistentKeys;
 import com.badbones69.crazycrates.api.objects.other.ItemBuilder;
 import com.badbones69.crazycrates.api.utils.MiscUtils;
-import com.badbones69.crazycrates.support.PluginSupport;
-import me.clip.placeholderapi.PlaceholderAPI;
 import org.apache.commons.lang.WordUtils;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
@@ -18,30 +16,27 @@ import org.bukkit.inventory.meta.trim.TrimMaterial;
 import org.bukkit.inventory.meta.trim.TrimPattern;
 import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.persistence.PersistentDataType;
+
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class Prize {
 
     private final List<ItemStack> items = new ArrayList<>();
-
-    private List<String> permissions = new ArrayList<>();
-    private ItemBuilder displayItem = new ItemBuilder();
     private final List<String> commands;
     private final List<String> messages;
+    private final String prizeName;
+    private final String prizeNumber;
+    private final List<ItemBuilder> builders;
+    private final ConfigurationSection section;
+    private List<String> permissions = new ArrayList<>();
+    private ItemBuilder displayItem = new ItemBuilder();
     private boolean firework = false;
     private String crateName = "";
-    private final String prizeName;
     private int maxRange = 100;
-    private final String prizeNumber;
     private int chance = 0;
-
     private List<Tier> tiers = new ArrayList<>();
-    private final List<ItemBuilder> builders;
     private Prize alternativePrize;
-
-    private final ConfigurationSection section;
 
     public Prize(ConfigurationSection section, List<Tier> tierPrizes, String crateName, Prize alternativePrize) {
         this.section = section;
@@ -63,16 +58,15 @@ public class Prize {
         this.tiers = tierPrizes;
 
         this.alternativePrize = alternativePrize;
-
         this.prizeName = section.getString("DisplayName", WordUtils.capitalizeFully(section.getString("DisplayItem", "STONE").replaceAll("_", " ")));
         this.maxRange = section.getInt("MaxRange", 100);
         this.chance = section.getInt("Chance", 100);
         this.firework = section.getBoolean("Firework", false);
 
-        this.messages = section.contains("Messages") ? section.getStringList("Messages") : Collections.emptyList();
-        this.commands = section.contains("Commands") ? section.getStringList("Commands") : Collections.emptyList();
+        this.messages = section.contains("Messages") ? section.getStringList("Messages") : List.of();
+        this.commands = section.contains("Commands") ? section.getStringList("Commands") : List.of();
 
-        this.permissions = section.contains("BlackListed-Permissions") ? section.getStringList("BlackListed-Permissions") : Collections.emptyList();
+        this.permissions = section.contains("BlackListed-Permissions") ? section.getStringList("BlackListed-Permissions") : List.of();
 
         if (!this.permissions.isEmpty()) {
             this.permissions.replaceAll(String::toLowerCase);
@@ -99,7 +93,7 @@ public class Prize {
 
         this.section = section;
     }
-    
+
     /**
      * @return the name of the prize.
      */
@@ -152,84 +146,84 @@ public class Prize {
     public ItemBuilder getDisplayItemBuilder() {
         return this.displayItem;
     }
-    
+
     /**
      * @return the list of tiers the prize is in.
      */
     public List<Tier> getTiers() {
         return this.tiers;
     }
-    
+
     /**
      * @return the messages sent to the player.
      */
     public List<String> getMessages() {
         return this.messages;
     }
-    
+
     /**
      * @return the commands that are run when the player wins.
      */
     public List<String> getCommands() {
         return this.commands;
     }
-    
+
     /**
      * @return the Editor ItemStacks that are given to the player that wins.
      */
     public List<ItemStack> getItems() {
         return this.items;
     }
-    
+
     /**
      * @return the ItemBuilders for all the custom items made from the Items: option.
      */
     public List<ItemBuilder> getItemBuilders() {
         return this.builders;
     }
-    
+
     /**
      * @return the name of the crate the prize is in.
      */
     public String getCrateName() {
         return this.crateName;
     }
-    
+
     /**
      * @return the chance the prize has of being picked.
      */
     public int getChance() {
         return this.chance;
     }
-    
+
     /**
      * @return the max range of the prize.
      */
     public int getMaxRange() {
         return this.maxRange;
     }
-    
+
     /**
      * @return true if a firework explosion is played and false if not.
      */
     public boolean useFireworks() {
         return this.firework;
     }
-    
+
     /**
      * @return the alternative prize the player wins if they have a blacklist permission.
      */
     public Prize getAlternativePrize() {
         return this.alternativePrize;
     }
-    
+
     /**
      * @return true if the prize doesn't have an alternative prize and false if it does.
      */
     public boolean hasAlternativePrize() {
         return this.alternativePrize == null;
     }
-    
+
     /**
      * @return true if they prize has blacklist permissions and false if not.
      */
@@ -322,12 +316,11 @@ public class Prize {
 
             return builder;
         } catch (Exception exception) {
-            List<String> list = new ArrayList<>() {{
-               add("&cThere was an error with one of your prizes!");
-               add("&cThe reward in question is labeled: &e" + section.getName() + " &cin crate: &e" + crateName);
-               add("&cName of the reward is " + section.getString("DisplayName"));
-               add("&cIf you are confused, Stop by our discord for support!");
-            }};
+            List<String> list = List.of(
+                    "&cThere was an error with one of your prizes!",
+                    "&cThe reward in question is labeled: &e" + this.section.getName() + " &cin crate: &e" + this.crateName,
+                    "&cName of the reward is " + this.section.getString("DisplayName"),
+                    "&cIf you are confused, Stop by our discord for support!");
 
             return new ItemBuilder().setMaterial(Material.RED_TERRACOTTA).setName("&c&lERROR").setLore(list);
         }
